@@ -129,11 +129,11 @@
 		<!-- The base URL of the site, including the trailing slash. Used in constucting 
     URLs in mail templates. -->
 		<add key="WebRoot" value="http://localhost:8000/Dropthings/"/>
-		<!-- You can put a differnet domain to take advantage of parallel downloading -->
+		<!-- You can put a differnet domain to take advantage of parallel downloading. -->
 		<add key="CssPrefix" value=""/>
-		<!-- You can put a differnet domain to take advantage of parallel downloading -->
+		<!-- You can put a differnet domain to take advantage of parallel downloading. -->
 		<add key="JsPrefix" value=""/>
-		<!-- You can put a differnet domain to take advantage of parallel downloading -->
+		<!-- You can put a differnet domain to take advantage of parallel downloading. -->
 		<add key="ImgPrefix" value=""/>
 		<!-- Used to version script links. Increase this when you make changes in any js which is versioned.
     Otherwise browser won't download the latest version if it's cached on browser. -->
